--- a/blg/src/templates/index.html
+++ b/blg/src/templates/index.html
@@ -5,5 +5,14 @@
 </head>
 <body>
  <h1>{{ title }} is working</h1>
+
+{% for obj in object_list %}
+	{{ obj.id }}</br>
+	<a href="{{ obj.get_absolute_url }}">{{ obj.title }}</a></br>
+	{{ obj.content }}</br>
+	{{ obj.updated }}</br>
+	{{ obj.timestamp }}</br>
+	</br>
+{% endfor %}
 </body>
 </html>
