--- a/blg/src/templates/post_detail.html
+++ b/blg/src/templates/post_detail.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-</head>
-<body>
- <h1>{{ title }}</h1>
+{% extends "base.html" %}
+
+{% block head_title %} 
+{{instance.title}} | {{ block.super }} 
+{% endblock head_title %}
+
+{% block content %}
+
+ 	<h1>{{ title }}</h1>
 
 	{{ instance.id }}</br>
 	{{ instance.title }}</br>
 	{{ instance.content }}</br>
 	{{ instance.updated }}</br>
 	{{ instance.timestamp }}</br></br>
-	
 
-</body>
-</html>
+{% endblock %}
